bpo-40596: Fix str.isidentifier() for non-canonicalized strings containing non-BMP characters on Windows.