Objects/typeobject.c
@@ -2319,6 +2319,12 @@ valid_identifier(PyObject *s)
                      Py_TYPE(s)->tp_name);
         return 0;
     }
+    /* Since there is no way to return an error from PyUnicode_IsIdentifier()
+       we have to call PyUnicode_READY() to ensure that the string object is
+       in the "canonical" representation. */
+    if (PyUnicode_READY(s) < 0) {
+        return 0;
+    }
     if (!PyUnicode_IsIdentifier(s)) {
         PyErr_SetString(PyExc_TypeError,
                         "__slots__ must be identifiers");
